tests/negative/test_macro_arg_non_ref_asgn.orb
mac foo (a::preprocess) {
    = a {};
    ret {};
};

fnc main () () {
    foo {};
};